--- a/index.html
+++ b/index.html
@@ -5,13 +5,229 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inflencer CSS Responsive Landing Page</title>
+    <!-- Fontawesome icon kit -->
+    <script src="https://kit.fontawesome.com/8e4bad2263.js" crossorigin="anonymous"></script>
     <!-- External Css Style link-->
     <link rel="stylesheet" href="css/style.css">
+
 </head>
 <body>
 
+    <!---------------- Header Nav and Banner Section ------------------>
+
+<header>
+    <!-- Header Nav -->
+    <nav class="nav-container">
+
+    </nav>
+
+    <!-- Header Banner -->
+    <section class="header-banner-container">
+        <div class="banner-row">
+            <h3 class="banner-title">
+                Start your Journey as Influencer
+            </h3>
+            <p class="banner-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem vestibulum sed scelerisque eros. Lectus faucibus.</p>
+            <button>Preebook now</button>
+        </div>
+        <div class="banner-row camera-section">
+            <img src="img/main-camera.png" alt="">
+        </div>
+    </section>
+</header>
+
+    <!---------------------- Our Partner Section ------------------------------>
+
+    <section class="our-partner-container">
+        <img src="img/logos/Amazon.svg" alt="">
+        <img src="img/logos/Alibaba.svg" alt="">
+        <img src="img/logos/Daraz.pk Logo.svg" alt="">
+        <img src="img/logos/Ebay.svg" alt="">
+        <img src="img/logos/Rakuten.svg" alt="">
+        <img src="img/logos/Target.svg" alt="">
+        <img src="img/logos/Walmart.svg" alt="">
+    </section>
+
+
+
+    <!--------------------------------- Popular Collection Section ------------------------------------>
 
     
-    
+    <section class="popular-collection-container">
+        <h4 class="pupular-collection-title">Popular Collection</h4>
+        <div class="pupular-products-container">
+            <div class="popular-product">
+                <img src="img/tripod.png" alt="">
+                <h4 class="product-title">Flex Tripod</h4>
+                <p class="product-price">$50.48</p>
+                <div class="product-review">
+                    <i class="fa-solid fa-star filled"></i>
+                    <i class="fa-solid fa-star filled"></i>
+                    <i class="fa-solid fa-star filled"></i>
+                    <i class="fa-solid fa-star filled"></i>
+                    <i class="fa-solid fa-star-half-stroke unfilled"></i>
+                    <span class="rating">4.99</span>
+                </div>
+                <p class="product-details">
+                    Wordwide shifting available.
+                </p>
+                <p class="product-details">
+                    Buyers protection possible!
+                </p>
+            </div>
+            <div class="popular-product">
+                <img src="img/tripod.png" alt="">
+                <h4 class="product-title">Flex Tripod</h4>
+                <p class="product-price">$50.48</p>
+                <div class="product-review">
+                    <i class="fa-solid fa-star filled"></i>
+                    <i class="fa-solid fa-star filled"></i>
+                    <i class="fa-solid fa-star filled"></i>
+                    <i class="fa-solid fa-star filled"></i>
+                    <i class="fa-solid fa-star-half-stroke unfilled"></i>
+                    <span class="rating">4.99</span>
+                </div>
+                <p class="product-details">
+                    Wordwide shifting available.
+                </p>
+                <p class="product-details">
+                    Buyers protection possible!
+                </p>
+            </div>
+            <div class="popular-product">
+                <img src="img/tripod.png" alt="">
+                <h4 class="product-title">Flex Tripod</h4>
+                <p class="product-price">$50.48</p>
+                <div class="product-review">
+                    <i class="fa-solid fa-star filled"></i>
+                    <i class="fa-solid fa-star filled"></i>
+                    <i class="fa-solid fa-star filled"></i>
+                    <i class="fa-solid fa-star filled"></i>
+                    <i class="fa-solid fa-star-half-stroke unfilled"></i>
+                    <span class="rating">4.99</span>
+                </div>
+                <p class="product-details">
+                    Wordwide shifting available.
+                </p>
+                <p class="product-details">
+                    Buyers protection possible!
+                </p>
+            </div>
+            <div class="popular-product">
+                <img src="img/tripod.png" alt="">
+                <h4 class="product-title">Flex Tripod</h4>
+                <p class="product-price">$50.48</p>
+                <div class="product-review">
+                    <i class="fa-solid fa-star filled"></i>
+                    <i class="fa-solid fa-star filled"></i>
+                    <i class="fa-solid fa-star filled"></i>
+                    <i class="fa-solid fa-star filled"></i>
+                    <i class="fa-solid fa-star-half-stroke unfilled"></i>
+                    <span class="rating">4.99</span>
+                </div>
+                <p class="product-details">
+                    Wordwide shifting available.
+                </p>
+                <p class="product-details">
+                    Buyers protection possible!
+                </p>
+            </div>
+            <div class="popular-product">
+                <img src="img/tripod.png" alt="">
+                <h4 class="product-title">Flex Tripod</h4>
+                <p class="product-price">$50.48</p>
+                <div class="product-review">
+                    <i class="fa-solid fa-star filled"></i>
+                    <i class="fa-solid fa-star filled"></i>
+                    <i class="fa-solid fa-star filled"></i>
+                    <i class="fa-solid fa-star filled"></i>
+                    <i class="fa-solid fa-star-half-stroke unfilled"></i>
+                    <span class="rating">4.99</span>
+                </div>
+                <p class="product-details">
+                    Wordwide shifting available.
+                </p>
+                <p class="product-details">
+                    Buyers protection possible!
+                </p>
+            </div>
+            <div class="popular-product">
+                <img src="img/tripod.png" alt="">
+                <h4 class="product-title">Flex Tripod</h4>
+                <p class="product-price">$50.48</p>
+                <div class="product-review">
+                    <i class="fa-solid fa-star filled"></i>
+                    <i class="fa-solid fa-star filled"></i>
+                    <i class="fa-solid fa-star filled"></i>
+                    <i class="fa-solid fa-star filled"></i>
+                    <i class="fa-solid fa-star-half-stroke unfilled"></i>
+                    <span class="rating">4.99</span>
+                </div>
+                <p class="product-details">
+                    Wordwide shifting available.
+                </p>
+                <p class="product-details">
+                    Buyers protection possible!
+                </p>
+            </div>
+            <div class="popular-product">
+                <img src="img/tripod.png" alt="">
+                <h4 class="product-title">Flex Tripod</h4>
+                <p class="product-price">$50.48</p>
+                <div class="product-review">
+                    <i class="fa-solid fa-star filled"></i>
+                    <i class="fa-solid fa-star filled"></i>
+                    <i class="fa-solid fa-star filled"></i>
+                    <i class="fa-solid fa-star filled"></i>
+                    <i class="fa-solid fa-star-half-stroke unfilled"></i>
+                    <span class="rating">4.99</span>
+                </div>
+                <p class="product-details">
+                    Wordwide shifting available.
+                </p>
+                <p class="product-details">
+                    Buyers protection possible!
+                </p>
+            </div>
+            <div class="popular-product">
+                <img src="img/tripod.png" alt="">
+                <h4 class="product-title">Flex Tripod</h4>
+                <p class="product-price">$50.48</p>
+                <div class="product-review">
+                    <i class="fa-solid fa-star filled"></i>
+                    <i class="fa-solid fa-star filled"></i>
+                    <i class="fa-solid fa-star filled"></i>
+                    <i class="fa-solid fa-star filled"></i>
+                    <i class="fa-solid fa-star-half-stroke unfilled"></i>
+                    <span class="rating">4.99</span>
+                </div>
+                <p class="product-details">
+                    Wordwide shifting available.
+                </p>
+                <p class="product-details">
+                    Buyers protection possible!
+                </p>
+            </div>
+            <div class="popular-product">
+                <img src="img/tripod.png" alt="">
+                <h4 class="product-title">Flex Tripod</h4>
+                <p class="product-price">$50.48</p>
+                <div class="product-review">
+                    <i class="fa-solid fa-star filled"></i>
+                    <i class="fa-solid fa-star filled"></i>
+                    <i class="fa-solid fa-star filled"></i>
+                    <i class="fa-solid fa-star filled"></i>
+                    <i class="fa-solid fa-star-half-stroke unfilled"></i>
+                    <span class="rating">4.99</span>
+                </div>
+                <p class="product-details">
+                    Wordwide shifting available.
+                </p>
+                <p class="product-details">
+                    Buyers protection possible!
+                </p>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
