Complete header banner css style for desktop

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 Start your Journey as Influencer
             </h3>
             <p class="banner-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem vestibulum sed scelerisque eros. Lectus faucibus.</p>
-            <button>Preebook now</button>
+            <button class="btn-primary banner-button">Preebook Now <i class="fa-solid fa-arrow-right"></i></button>
         </div>
         <div class="banner-row camera-section">
             <img src="img/main-camera.png" alt="">
@@ -52,7 +52,7 @@
 
     <!--------------------------------- Popular Collection Section ------------------------------------>
 
-    
+
     <section class="popular-collection-container">
         <h4 class="pupular-collection-title">Popular Collection</h4>
         <div class="pupular-products-container">
